// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTranslationFiles returns translation files matching snapshot 1`] = `
[
  {
    "content": {
      "item.label.Dropdown": {
        "description": "Navbar item with label Dropdown",
        "message": "Dropdown",
      },
      "item.label.Dropdown item 1": {
        "description": "Navbar item with label Dropdown item 1",
        "message": "Dropdown item 1",
      },
      "item.label.Dropdown item 2": {
        "description": "Navbar item with label Dropdown item 2",
        "message": "Dropdown item 2",
      },
      "title": {
        "description": "The title in the navbar",
        "message": "navbar title",
      },
    },
    "path": "navbar",
  },
  {
    "content": {
      "copyright": {
        "description": "The footer copyright",
        "message": "Copyright FB",
      },
      "link.item.label.Link 1": {
        "description": "The label of footer link with label=Link 1 linking to https://facebook.com",
        "message": "Link 1",
      },
      "link.item.label.Link 2": {
        "description": "The label of footer link with label=Link 2 linking to https://facebook.com",
        "message": "Link 2",
      },
      "link.item.label.Link 3": {
        "description": "The label of footer link with label=Link 3 linking to https://facebook.com",
        "message": "Link 3",
      },
      "link.title.Footer link column 1": {
        "description": "The title of the footer links column with title=Footer link column 1 in the footer",
        "message": "Footer link column 1",
      },
      "link.title.Footer link column 2": {
        "description": "The title of the footer links column with title=Footer link column 2 in the footer",
        "message": "Footer link column 2",
      },
    },
    "path": "footer",
  },
]
`;

exports[`getTranslationFiles returns translation files matching snapshot 2`] = `
[
  {
    "content": {
      "item.label.Dropdown": {
        "description": "Navbar item with label Dropdown",
        "message": "Dropdown",
      },
      "item.label.Dropdown item 1": {
        "description": "Navbar item with label Dropdown item 1",
        "message": "Dropdown item 1",
      },
      "item.label.Dropdown item 2": {
        "description": "Navbar item with label Dropdown item 2",
        "message": "Dropdown item 2",
      },
      "title": {
        "description": "The title in the navbar",
        "message": "navbar title",
      },
    },
    "path": "navbar",
  },
  {
    "content": {
      "copyright": {
        "description": "The footer copyright",
        "message": "Copyright FB",
      },
      "link.item.label.Link 1": {
        "description": "The label of footer link with label=Link 1 linking to https://facebook.com",
        "message": "Link 1",
      },
      "link.item.label.Link 2": {
        "description": "The label of footer link with label=Link 2 linking to https://facebook.com",
        "message": "Link 2",
      },
    },
    "path": "footer",
  },
]
`;

exports[`translateThemeConfig returns translated themeConfig 1`] = `
{
  "announcementBar": {},
  "colorMode": {},
  "docs": {
    "versionPersistence": "none",
  },
  "footer": {
    "copyright": "Copyright FB (translated)",
    "links": [
      {
        "items": [
          {
            "label": "Link 1 (translated)",
            "to": "https://facebook.com",
          },
          {
            "label": "Link 2 (translated)",
            "to": "https://facebook.com",
          },
        ],
        "title": "Footer link column 1 (translated)",
      },
      {
        "items": [
          {
            "label": "Link 3 (translated)",
            "to": "https://facebook.com",
          },
        ],
        "title": "Footer link column 2 (translated)",
      },
    ],
    "style": "light",
  },
  "navbar": {
    "hideOnScroll": false,
    "items": [
      {
        "items": [
          {
            "items": [],
            "label": "Dropdown item 1 (translated)",
          },
          {
            "items": [],
            "label": "Dropdown item 2 (translated)",
          },
        ],
        "label": "Dropdown (translated)",
      },
    ],
    "style": "dark",
    "title": "navbar title (translated)",
  },
  "prism": {},
}
`;
